#295998 Fabric JS Website Bug: CommandBar - Text box is on top of header nav #296002 Fabric JS Website Bug:  SearchBox z-index issues #295990 Fabric JS Website Bug: Copyright banner in the HTML

--- a/src/documentation/sass/PageHeader.scss
+++ b/src/documentation/sass/PageHeader.scss
@@ -2,7 +2,7 @@
 .pageHeader {
   @include fullWidth();
   position: relative;
-  z-index: 6;
+  z-index: 11;
 }
 
 .content {
